--- a/examples/osgpangosimplerenderer/CMakeLists.txt
+++ b/examples/osgpangosimplerenderer/CMakeLists.txt
@@ -1,12 +1,7 @@
 PROJECT(osgpangosimplerenderer)
 
 LINK_LIBRARIES(osgPango
-	debug     osgViewer${CMAKE_DEBUG_POSTFIX}
-	optimized osgViewer
-	debug     osgGA${CMAKE_DEBUG_POSTFIX}
-	optimized osgGA
-	debug     osgDB${CMAKE_DEBUG_POSTFIX}
-	optimized osgDB
+    ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} ${OSGGA_LIBRARY} ${OSGTEXT_LIBRARY} ${OSGVIEWER_LIBRARY} ${OPENTHREADS_LIBRARY}
 )
 
 ADD_EXECUTABLE(osgpangosimplerenderer osgpangosimplerenderer.cpp)
