--- a/examples/osgpangoguiviewer/CMakeLists.txt
+++ b/examples/osgpangoguiviewer/CMakeLists.txt
@@ -3,10 +3,7 @@ PROJECT(osgpangoguiviewer)
 # osgPango gets the proper debug postfix automatically since it's part of the
 # current project, but we need to add the postfix for the other libs.
 LINK_LIBRARIES(osgPango
-               debug     OpenThreads${CMAKE_DEBUG_POSTFIX}
-               optimized OpenThreads
-               debug     osgDB${CMAKE_DEBUG_POSTFIX}
-               optimized osgDB
+    ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} ${OSGGA_LIBRARY} ${OSGTEXT_LIBRARY} ${OSGVIEWER_LIBRARY} ${OPENTHREADS_LIBRARY}
 )
 
 ADD_EXECUTABLE(osgpangoguiviewer osgpangoguiviewer.cpp)
