--- a/applications/osgpango-gr-cache/CMakeLists.txt
+++ b/applications/osgpango-gr-cache/CMakeLists.txt
@@ -1,11 +1,13 @@
 PROJECT(osgpango-gr-cache)
 
-LINK_LIBRARIES(osgPango
-    ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} 
+LINK_LIBRARIES(${OSGPANGO_LIBRARY_NAME}
+    ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY}
 )
 
 ADD_EXECUTABLE(osgpango-gr-cache osgpango-gr-cache.cpp)
 
 INSTALL(TARGETS osgpango-gr-cache DESTINATION ${CMAKE_INSTALL_PREFIX}/bin)
 SET_TARGET_PROPERTIES(osgpango-gr-cache PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
+SET_TARGET_PROPERTIES(osgpango-gr-cache PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OSGPANGO_ROOT}/bin)
+
 
