--- a/examples/osgpangoanimation/CMakeLists.txt
+++ b/examples/osgpangoanimation/CMakeLists.txt
@@ -1,6 +1,6 @@
 PROJECT(osgpangoanimation)
 
-LINK_LIBRARIES(osgPango
+LINK_LIBRARIES(${OSGPANGO_LIBRARY_NAME}
     ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} ${OSGGA_LIBRARY} ${OSGTEXT_LIBRARY} ${OSGVIEWER_LIBRARY} ${OPENTHREADS_LIBRARY}
 )
 
@@ -8,3 +8,4 @@ ADD_EXECUTABLE(osgpangoanimation osgpangoanimation.cpp)
 
 INSTALL(TARGETS osgpangoanimation DESTINATION ${CMAKE_INSTALL_PREFIX}/share/OpenSceneGraph/bin)
 SET_TARGET_PROPERTIES(osgpangoanimation PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
+SET_TARGET_PROPERTIES(osgpangoanimation PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OSGPANGO_ROOT}/bin)
