--- a/examples/osgpangovertical/CMakeLists.txt
+++ b/examples/osgpangovertical/CMakeLists.txt
@@ -1,6 +1,6 @@
 PROJECT(osgpangovertical)
 
-LINK_LIBRARIES(osgPango
+LINK_LIBRARIES(${OSGPANGO_LIBRARY_NAME}
     ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} ${OSGGA_LIBRARY} ${OSGTEXT_LIBRARY} ${OSGVIEWER_LIBRARY} ${OPENTHREADS_LIBRARY}
 )
 
@@ -8,3 +8,4 @@ ADD_EXECUTABLE(osgpangovertical osgpangovertical.cpp)
 
 INSTALL(TARGETS osgpangovertical DESTINATION ${CMAKE_INSTALL_PREFIX}/share/OpenSceneGraph/bin)
 SET_TARGET_PROPERTIES(osgpangovertical PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
+SET_TARGET_PROPERTIES(osgpangovertical PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OSGPANGO_ROOT}/bin)
