Changed the default library name to libosgPango3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -124,7 +124,7 @@ LINK_DIRECTORIES(
 	${PANGOCAIRO_LIBRARY_DIRS}
 )
 
-SET(OSGPANGO_LIBRARY_NAME "osgPango" CACHE STRING "base name for osgPango library")
+SET(OSGPANGO_LIBRARY_NAME "osgPango3" CACHE STRING "base name for osgPango library")
 
 ADD_LIBRARY(${OSGPANGO_LIBRARY_NAME} SHARED
 	${SRC_FILES}
