--- a/examples/osgpangodistancefield/CMakeLists.txt
+++ b/examples/osgpangodistancefield/CMakeLists.txt
@@ -1,6 +1,6 @@
 PROJECT(osgpangodistancefield)
 
-LINK_LIBRARIES(${OSGPANGO_LIBRARY_NAME}
+LINK_LIBRARIES(${OSGPAIRO_LIBRARY_NAME}
     ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} ${OSGGA_LIBRARY} ${OSGTEXT_LIBRARY} ${OSGVIEWER_LIBRARY} ${OPENTHREADS_LIBRARY}
 )
 
