--- a/examples/osgpangoupdatecb/CMakeLists.txt
+++ b/examples/osgpangoupdatecb/CMakeLists.txt
@@ -1,6 +1,6 @@
 PROJECT(osgpangoupdatecb)
 
-LINK_LIBRARIES(${OSGPANGO_LIBRARY_NAME}
+LINK_LIBRARIES(${OSGPAIRO_LIBRARY_NAME}
     ${OSG_LIBRARY} ${OSGUTIL_LIBRARY} ${OSGDB_LIBRARY} ${OSGGA_LIBRARY} ${OSGTEXT_LIBRARY} ${OSGVIEWER_LIBRARY} ${OPENTHREADS_LIBRARY}
 )
 
@@ -8,4 +8,4 @@ ADD_EXECUTABLE(osgpangoupdatecb osgpangoupdatecb.cpp)
 
 INSTALL(TARGETS osgpangoupdatecb DESTINATION ${CMAKE_INSTALL_PREFIX}/share/OpenSceneGraph/bin)
 SET_TARGET_PROPERTIES(osgpangoupdatecb PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
-SET_TARGET_PROPERTIES(osgpangoupdatecb PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OSGPANGO_ROOT}/bin)
+SET_TARGET_PROPERTIES(osgpangoupdatecb PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${OSGPAIRO_ROOT}/bin)
